--- a/src/app/admin/berths/berths-list/berths-list.component.html
+++ b/src/app/admin/berths/berths-list/berths-list.component.html
@@ -84,7 +84,7 @@
                                 </searchbar>
                             </section>
                         </th>
-                        <td class="tw-w-2/12" cdk-cell *cdkCellDef="let row">
+                        <td class="tw-w-3/12" cdk-cell *cdkCellDef="let row">
                             {{ row.name }}
                         </td>
                     </ng-container>
@@ -284,7 +284,7 @@
                         <td
                             cdk-cell
                             *cdkCellDef="let row"
-                            class="tw-flex tw-gap-4 tw-w-2/12"
+                            class="tw-flex tw-justify-center tw-gap-4"
                         >
                             <fa-icon
                                 icon="eye"
