--- a/src/app/admin/companies/companies-list/companies-list.component.html
+++ b/src/app/admin/companies/companies-list/companies-list.component.html
@@ -401,7 +401,7 @@
                         <td
                             cdk-cell
                             *cdkCellDef="let row"
-                            class="tw-flex tw-gap-4"
+                            class="tw-flex tw-justify-center tw-gap-4"
                         >
                             <fa-icon
                                 icon="eye"
