--- a/src/app/admin/berths/berths-success/berths-success.component.html
+++ b/src/app/admin/berths/berths-success/berths-success.component.html
@@ -1,4 +1,4 @@
-<success-container headerTitle="Add location">
+<success-container headerTitle="Add berth">
     <div>
         <h4 class="heading-4 tw-py-10 tw-text-center">Success!</h4>
         <p class="tw-text-center heading-6 tw-max-w-[929px] tw-mx-auto">Your berth was successfully added and an email was sent to you confirming the operation.</p>
@@ -6,10 +6,10 @@
     <div class="tw-text-center tw-py-5">
         <fa-icon icon="party-horn" class="tw-text-primary tw-text-[270px]"></fa-icon>
     </div>
-    <div class="tw-flex max-md:tw-flex-col tw-justify-center min-xl:tw-px-40 max-md:tw-px-0 max-md:tw-gap-5">
-        <div class="tw-flex tw-gap-4">
+    <div class="tw-flex tw-justify-center max-md:tw-flex-col min-xl:tw-px-40 max-md:tw-px-0 max-md:tw-gap-5 min-md:tw-max-w-[560px] max-sm:tw-w-full tw-m-auto tw-gap-5">
+        <!-- <div class="tw-flex tw-gap-4"> -->
         <button type="button" class="btn btn-outline-primary min-lg:tw-min-w-[250px]" routerLink="../../">Home</button>
         <button type="button" class="btn btn-primary min-lg:tw-min-w-[250px]" routerLink="../add">New Berth</button>
-    </div>
+    <!-- </div> -->
 </div>
 </success-container>
