--- a/src/app/admin/users/users-delete-modal/users-delete-modal.component.html
+++ b/src/app/admin/users/users-delete-modal/users-delete-modal.component.html
@@ -1,7 +1,7 @@
 <div class="tw-max-w-sm tw-px-4 tw-py-4 min-sm:tw-px-16 min-sm:tw-py-8">
     <div class="tw-whitespace-pre-line  tw-max-w-xs tw-mb-8">
         <p class="tw-font-bold tw-text-muted tw-text-xl tw-text-center tw-mb-4 tw-text-columnCell">
-            Are you sure you want to delete User #12345 ?
+            Are you sure you want to delete this user ?
         </p>
         <p class="tw-font-bold tw-max-w-xs tw-text-center tw-text-sm tw-text-columnCell">
             You can also edit the record
