--- a/src/app/admin/companies/companies-list/companies-list.component.html
+++ b/src/app/admin/companies/companies-list/companies-list.component.html
@@ -43,7 +43,7 @@
         tableTitle="Companies list"
     >
         <div table class="tw-w-full tw-shadow-lg">
-            <ng-scrollbar track="vertical" class="tw-min-h-[calc(100vh-200px)]">
+            <ng-scrollbar track="horizontal" [autoHeightDisabled]="false">
                 <table
                     class="material-table no-wrap tw-overflow-hidden"
                     matSort
@@ -54,10 +54,10 @@
                     [dataSource]="dataSource"
                 >
                     <ng-container cdkColumnDef="name">
-                        <th cdk-header-cell *cdkHeaderCellDef scope="col">
+                        <th cdk-header-cell *cdkHeaderCellDef scope="col" class="tw-max-w-40">
                             <section class="tw-flex tw-flex-col tw-gap-4">
                                 <div mat-sort-header="name">Company name</div>
-                                <searchbar [maxWidth]="152">
+                                <searchbar >
                                     <fa-icon leftIcon icon="search"></fa-icon>
                                     <input
                                         #searchName
@@ -173,11 +173,11 @@
                         </td>
                     </ng-container> -->
 
-                    <ng-container cdkColumnDef="addrCounty">
-                        <th cdk-header-cell *cdkHeaderCellDef scope="col">
+                    <!-- <ng-container cdkColumnDef="addrCounty">
+                        <th cdk-header-cell *cdkHeaderCellDef scope="col" class="tw-max-w-32">
                             <section class="tw-flex tw-flex-col tw-gap-4">
                                 <div mat-sort-header="addrCounty">County</div>
-                                <searchbar [maxWidth]="73">
+                                <searchbar>
                                     <fa-icon leftIcon icon="search"></fa-icon>
                                     <input
                                         #searchCounty
@@ -213,13 +213,13 @@
                         <td cdk-cell *cdkCellDef="let row">
                             {{ row.addrCounty }}
                         </td>
-                    </ng-container>
+                    </ng-container> -->
 
                     <ng-container cdkColumnDef="addrCity">
-                        <th cdk-header-cell *cdkHeaderCellDef scope="col">
+                        <th cdk-header-cell *cdkHeaderCellDef scope="col" class="tw-max-w-32">
                             <section class="tw-flex tw-flex-col tw-gap-4">
                                 <div mat-sort-header="addrCity">City</div>
-                                <searchbar [maxWidth]="73">
+                                <searchbar>
                                     <fa-icon leftIcon icon="search"></fa-icon>
                                     <input
                                         #searchCity
@@ -258,10 +258,10 @@
                     </ng-container>
 
                     <ng-container cdkColumnDef="addrCountry">
-                        <th cdk-header-cell *cdkHeaderCellDef scope="col">
+                        <th cdk-header-cell *cdkHeaderCellDef scope="col" class="tw-max-w-36">
                             <section class="tw-flex tw-flex-col tw-gap-4">
                                 <div mat-sort-header="addrCountry">Country</div>
-                                <searchbar [maxWidth]="108">
+                                <searchbar>
                                     <fa-icon leftIcon icon="search"></fa-icon>
                                     <input
                                         #searchCountry
@@ -300,12 +300,12 @@
                     </ng-container>
 
                     <ng-container cdkColumnDef="addrZipCode">
-                        <th cdk-header-cell *cdkHeaderCellDef scope="col">
+                        <th cdk-header-cell *cdkHeaderCellDef scope="col" class="tw-max-w-32">
                             <section class="tw-flex tw-flex-col tw-gap-4">
                                 <div mat-sort-header="addrZipCode">
                                     Zip Code
                                 </div>
-                                <searchbar [maxWidth]="85">
+                                <searchbar>
                                     <fa-icon leftIcon icon="search"></fa-icon>
                                     <input
                                         #searchZipCode
