--- a/src/app/admin/users/users-add-edit/users-add-edit.component.html
+++ b/src/app/admin/users/users-add-edit/users-add-edit.component.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div formGroupName="userSetting">
-                    <div iconic-input-wrapper leftSvg="../../../../assets/images/department-input.svg">
+                    <div iconic-input-wrapper leftSvg="./assets/images/department-input.svg">
                         <input inputRef type="text" id="department" placeholder="Department" formControlName="department">
                     </div>
                 </div>
