--- a/src/app/admin/berths/berths-list/berths-list.component.html
+++ b/src/app/admin/berths/berths-list/berths-list.component.html
@@ -41,7 +41,7 @@
         tableTitle="Berths list"
     >
         <div table class="tw-w-full tw-shadow-lg">
-            <ng-scrollbar track="vertical" class="tw-min-h-[calc(100vh-200px)]">
+            <ng-scrollbar track="horizontal" [autoHeightDisabled]="false">
                 <table
                     class="material-table no-wrap tw-overflow-hidden"
                     matSort
