--- a/src/styles.scss
+++ b/src/styles.scss
@@ -141,3 +141,17 @@ select:focus {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   border-color: #1B9FE8;
 }
+
+// .iconic-layout-wrapper.invalid > .input-container {
+//   border-color: var(--invalid-color);}
+.invalid {
+  font-size: 90%;
+  color: var(--invalid-color);
+}
+// .iconic-layout-wrapper.invalid > .errors-container {
+//   width: 100%;
+//   visibility: visible;
+//     height: 21px;
+//     font-size: 90%;
+//   color: var(--invalid-color);
+// }
