--- a/src/app/admin/companies/companies-add-edit/companies-add-edit.component.scss
+++ b/src/app/admin/companies/companies-add-edit/companies-add-edit.component.scss
@@ -1,3 +1,12 @@
+.mat-stepper-horizontal {
+    margin-top: 8px;
+
+    ::ng-deep div.mat-horizontal-stepper-header-container {
+        padding: 0 15%;
+        margin: 0 auto;
+    }
+}
+
 [type='text'], input:where(:not([type])), [type='email'], [type='url'], [type='password'], [type='number'], [type='date'], [type='datetime-local'], [type='month'], [type='search'], [type='tel'], [type='time'], [type='week'], [multiple], textarea, select {
     appearance: none;
     background-color: #fff;
