--- a/src/app/admin/companies/companies-add-edit/companies-add-edit.component.scss
+++ b/src/app/admin/companies/companies-add-edit/companies-add-edit.component.scss
@@ -6,6 +6,9 @@
         margin: 0 auto;
     }
 }
+::ng-deep .mat-horizontal-stepper-header{
+    pointer-events: none !important;
+}
 
 [type='text'], input:where(:not([type])), [type='email'], [type='url'], [type='password'], [type='number'], [type='date'], [type='datetime-local'], [type='month'], [type='search'], [type='tel'], [type='time'], [type='week'], [multiple], textarea, select {
     appearance: none;
