--- a/src/app/operator/dashboard/dashboard.component.html
+++ b/src/app/operator/dashboard/dashboard.component.html
@@ -20,14 +20,15 @@
     </div>
     <div class="flex w-full max-lg:flex-col gap-12">
         <div class="flex-1 flex-grow flex flex-col p-4 bg-white shadow-md">
-            <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="sidsByStatus" [legend]="true"
+            <ngx-charts-pie-chart [view]="view" [customColors]="customColors" [results]="sidsByStatus" [legend]="true"
                 [legendPosition]="legendPosition" [doughnut]="false"
                 [legendTitle]="'Sids By Status'"></ngx-charts-pie-chart>
         </div>
         <div class="flex-1 flex-grow flex flex-col p-4 bg-white shadow-md">
-            <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="timeBreakDown" [legend]="true"
+            <ngx-charts-pie-chart [view]="view" [customColors]="customColors" [results]="timeBreakDown" [legend]="true"
                 [legendPosition]="legendPosition" [doughnut]="false"
                 [legendTitle]="'Time Break Down'"></ngx-charts-pie-chart>
         </div>
     </div>
+    <app-map Title="SIDs by Port"></app-map>
 </div>
