--- a/src/app/admin/ports/ports-add-edit/ports-add-edit.component.html
+++ b/src/app/admin/ports/ports-add-edit/ports-add-edit.component.html
@@ -244,6 +244,59 @@
                     </button>
                 </div>
             </div>
+            <div>
+                <h6 class="font-bold">Zone</h6>
+                <div class="mt-10">
+                    <table class="table border border-lightgray">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Coordinates</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody formArrayName="zones">
+                            <tr
+                                *ngFor="
+                                    let zone of zones.controls;
+                                    let i = index
+                                "
+                                [formGroupName]="i"
+                            >
+                                <td>
+                                    <input
+                                        class="text-center"
+                                        matInput
+                                        formControlName="name"
+                                    />
+                                </td>
+                                <td>
+                                    <input
+                                        class="text-center"
+                                        matInput
+                                        formControlName="coordinates"
+                                    />
+                                </td>
+                                <td>
+                                    <!-- <fa-icon  icon="pen" class="text-primary cursor-pointer"></fa-icon> -->
+                                    <fa-icon
+                                        icon="trash"
+                                        (click)="removeZone(i)"
+                                        class="text-primary cursor-pointer"
+                                    ></fa-icon>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <button
+                        type="button"
+                        class="text-primary font-bold py-5"
+                        (click)="addZone()"
+                    >
+                        <fa-icon icon="circle-plus"></fa-icon> Add New zone
+                    </button>
+                </div>
+            </div>
         </div>
 
         <div class="flex justify-center pt-5">
