--- a/src/app/admin/berths/berths-success/berths-success.component.html
+++ b/src/app/admin/berths/berths-success/berths-success.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="flex justify-center max-md:flex-col min-xl:px-40 max-md:px-0 max-md:gap-5 min-md:max-w-[560px] max-sm:w-full m-auto gap-5">
         <!-- <div class="flex gap-4"> -->
-        <button type="button" class="btn btn-outline-primary min-lg:min-w-[250px]" routerLink="../../">Home</button>
+        <button type="button" class="btn btn-outline-primary min-lg:min-w-[250px]" routerLink="../">Home</button>
         <button type="button" class="btn btn-primary min-lg:min-w-[250px]" routerLink="../add">New Berth</button>
     <!-- </div> -->
 </div>
