--- a/src/app/admin/ports/ports-add-edit/ports-add-edit.component.html
+++ b/src/app/admin/ports/ports-add-edit/ports-add-edit.component.html
@@ -173,11 +173,11 @@
                     <table class="table border border-lightgray">
                         <thead>
                             <tr>
-                                <th>Name</th>
-                                <th>Capacity</th>
-                                <th>Occupied Capacity</th>
-                                <th>Client</th>
-                                <th>Product</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Phone Number</th>
+                                <!-- <th>Client</th>
+                                <th>Product</th> -->
                                 <th></th>
                             </tr>
                         </thead>
@@ -193,24 +193,24 @@
                                     <input
                                         class="text-center"
                                         matInput
-                                        formControlName="name"
+                                        formControlName="firstName"
                                     />
                                 </td>
                                 <td>
                                     <input
                                         class="text-center"
                                         matInput
-                                        formControlName="capacity"
+                                        formControlName="lastName"
                                     />
                                 </td>
                                 <td>
                                     <input
                                         matInput
                                         class="text-center"
-                                        formControlName="occupiedCapacity"
+                                        formControlName="phoneNumber"
                                     />
                                 </td>
-                                <td>
+                                <!-- <td>
                                     <input
                                         matInput
                                         class="text-center"
@@ -223,7 +223,7 @@
                                         class="text-center"
                                         formControlName="product"
                                     />
-                                </td>
+                                </td> -->
                                 <td>
                                     <!-- <fa-icon  icon="pen" class="text-primary cursor-pointer"></fa-icon> -->
                                     <fa-icon
