--- a/src/app/shared/components/change-location-modal/change-location-modal.component.html
+++ b/src/app/shared/components/change-location-modal/change-location-modal.component.html
@@ -1,33 +1,35 @@
 <div class="px-4 py-4 min-xl:px-16 min-xl:py-8">
     <div class="mb-8">
-        <h1 class="heading-1 text-columnCell text-center py-10">PICK ANOTHER LOCATION</h1>
+        <h1 class="heading-1 text-columnCell text-center py-10">PICK ANOTHER PORT</h1>
         <div class="flex max-xl:flex-col justify-between">
-            <p>You can also search for a specific location or choose from the list below</p>
+            <p>You can also search for a specific port or choose from the list below</p>
             <searchbar [minWidth]="500">
-                <fa-icon icon="search"></fa-icon>
-                <input input type="text" placeholder="Search Location" [(ngModel)]="search">
+                <fa-icon icon="search" leftIcon></fa-icon>
+                <input input type="text" placeholder="Port" [(ngModel)]="search">
             </searchbar>
         </div>
-        <div class="flex flex-wrap max-xl:flex-col w-full h-full gap-4 p-2" *ngIf="data?.locations && data?.locations?.length">
-            <div (click)="selectLocation(i, item.id)" 
-            [ngClass]="{'border border-primary': selectedLocations.includes(item.id)}"
-            class="flex grow min-xl:w-1/4 flex-col shadow-lg cursor-pointer" 
-            *ngFor="let item of data.locations | filter: search : 'name'; let i = index;">
+        <div class="flex flex-wrap max-xl:flex-col justify-center items-center w-full h-full gap-4 p-2"
+            *ngIf="data?.locations && data?.locations?.length">
+            <div (click)="selectLocation(i, item?.attributes?.id)"
+                [ngClass]="{'border border-primary': selectedLocations.includes(item?.attributes?.id)}"
+                class="flex grow min-xl:w-1/4 flex-col shadow-lg cursor-pointer min-lg:max-w-[390px] max-md:w-full"
+                *ngFor="let item of data.locations | filter: search : 'attributes?.name'; let i = index;">
                 <div class="text-center">
-                    <div [title]="item.name" class="bg-center bg-no-repeat bg-cover min-h-[219px]"
-                    [style.background-image]="'url(' + item.image + ')'"></div>
+                    <div [title]="item?.attributes?.name" class="bg-center bg-no-repeat bg-cover min-h-[219px] min-md:min-w-[320px]"
+                        [style.background-image]="'url(' + item?.attributes?.imgPreview?.fullpath + ')'"></div>
                 </div>
-                <div class="font-bold text-center py-4">{{item.name}}</div>
+                <div class="font-bold text-center py-4">{{item?.attributes?.name}}</div>
             </div>
-            <div class="w-full" *ngIf="(data.locations | filter: search : 'name').length === 0">
-                <p class="text-center text-columnCell">There's no such location found...</p>
+            <div class="w-full" *ngIf="(data?.locations | filter: search : 'name').length === 0">
+                <p class="text-center text-columnCell">No Location Found</p>
             </div>
         </div>
     </div>
-    
-    <div class="flex justify-center flex-wrap-reverse gap-4">
-        <button tabIndex="-1" (click)="cancel()" class="btn btn-outline-primary min-w-[130px]">Cancel</button>
-        <button [disabled]="!id" tabIndex="-1" (click)="confirm()" class="btn btn-primary min-w-[130px]">Confirm</button>
+
+    <div class="flex justify-center flex-wrap-reverse gap-4 max-sm:flex-col max-sm:w-full">
+        <button tabIndex="-1" (click)="cancel()"
+            class="btn btn-outline-primary system-button max-sm:w-full">Cancel</button>
+        <button [disabled]="!id" tabIndex="-1" (click)="confirm()"
+            class="btn btn-primary system-button max-sm:w-full">Save</button>
     </div>
-    </div>
-    
+</div>
