--- a/src/app/admin/users/users-list/users-list.component.html
+++ b/src/app/admin/users/users-list/users-list.component.html
@@ -82,9 +82,7 @@
                                     <option value="OPERATOR">Operator</option>
                                 </select>
                             </section>
-                        <td cdk-cell *cdkCellDef="let row">
-                            {{ row.user.userRole }}
-                        </td>
+                        <td cdk-cell *cdkCellDef="let row">{{row.user.userRole === 'ROLE_USER_OPERATOR' ? 'OPERATOR' : 'ADMIN'}}</td>
                     </ng-container>
 
                     <ng-container cdkColumnDef="phone">
